# TI

./: CMakeLists.txt  CMakeLists_laptop.txt  FD_KL_ADMM.mnn  FINAL_WORKING_CODE.cpp  FINAL_WORKING_CODE_laptop.cpp  UltraFace.cpp  UltraFace.hpp  frame_interleaving_ear_laptop.cpp  main.cpp  ulffd_openseeface.cpp  webcam_mnn.cpp  workingcode.cpp
MODELS/: FD_ADMM_ABS.mnn  FD_ADMM_ADMM.mnn  RFB-320_ADMM_abs.mnn  lm_model3_quant.mnn  lm_model3_quant_KL.mnn  lm_model3_quant_KL_ADMM.mnn
